Name:                scope

Version:             0.4

Synopsis:            An interactive renderer for plotting time-series data

--Description:

License:             BSD3
License-file:        LICENSE
Author:              Conrad Parker
Maintainer:          conrad@metadecks.org
Category:            Development

Cabal-Version:       >= 1.8
Build-type:          Simple
Data-Files:
  data/actions.ui
  demo/demo1.zoom
  demo/demo2.zoom
  demo/demo3.zoom
  demo/demo4.zoom

flag splitBase
  description: Use the split-up base package.

Library
  if flag(splitBase)
    build-depends:
      base >= 3 && < 6
  else
    build-depends:
      base < 3

  Build-Depends:
    cairo,
    gtk,
    iteratee                  >= 0.8.6.0 && < 0.9,
    MonadCatchIO-transformers >  0.2     && < 0.3,
    mtl                       >= 2.0.0.0 && < 3,
    zoom-cache                >= 0.8.0.0 && < 0.9

  Exposed-modules:
    Scope.View
    Scope.Types

Executable scope
  if flag(splitBase)
    build-depends:
      base >= 3 && < 6
  else
    build-depends:
      base < 3

  Main-Is:             main.hs
  Other-Modules:       Children
                       GUI
  Hs-Source-Dirs:      src
  Build-Depends:
    cairo,
    containers                >= 0.2     && < 0.5,
    glib,
    gtk,
    iteratee                  >= 0.8.6.0 && < 0.9,
    MonadCatchIO-transformers >  0.2     && < 0.3,
    mtl                       >= 2.0.0.0 && < 3,
    texture-synthesis         >= 0.1.0.0 && < 0.2.0.0,
    zoom-cache                >= 0.8.0.0 && < 0.9,
    scope

------------------------------------------------------------------------
-- Git repo
--
source-repository head
  type: git
  location: git://github.com/kfish/scope.git
